--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
+    "cloudconvert": "^3.0.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "docx-templates": "^4.14.1",
